@@ -3,7 +3,6 @@ package dev.dsf.linter.input;
 import dev.dsf.linter.logger.Logger;
 
 import java.io.*;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.*;
@@ -147,21 +146,9 @@ public class JarHandler {
             // Cleanup on failure
             deleteDirectoryRecursively(extractDir);
             throw e;
-        } finally {
-            // For remote JARs the downloaded temp file is no longer needed after extraction
-            if (isRemote) {
-                try {
-                    Files.deleteIfExists(jarFile);
-                } catch (IOException _deleteEx) {
-                    logger.warn("Could not delete temporary download file: " + jarFile + ": " + _deleteEx.getMessage());
-                }
-            }
         }
 
-        // Remote JARs are kept on disk so subsequent runs can be inspected and the
-        // directory is reused (overwritten) on the next invocation with the same URL.
-        // Local JAR extraction directories are temporary and cleaned up after linting.
-        return new JarProcessingResult(extractDir, jarName, !isRemote);
+        return new JarProcessingResult(extractDir, jarName, true);
     }
 
     /**
@@ -213,7 +200,7 @@ public class JarHandler {
      * @throws IOException if download fails or connection times out
      */
     private Path downloadJar(String urlString) throws IOException {
-        URL url = java.net.URI.create(urlString).toURL();
+        URL url = new URL(urlString);
         String jarName = extractJarNameFromUrl(urlString);
 
         Path tempJar = Files.createTempFile("dsf-linter-jar-", "-" + jarName);
